--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Asia, Central -- Description and travel'
 - !lcsh 'Vámbéry, Ármin, 1832-1913'
 - !lcc 'DS'
+- GITenberg
 title: Árminius Vambéry, his life and adventures
 url: http://www.gutenberg.org/ebooks/40163
